Fix message bubble pulse animation after jump

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -123,7 +123,7 @@ $brandings: (
       --mc-message-background-color-incoming-nav: -g($mc, message-background-color-incoming-nav),
       --mc-message-background-color-outgoing: -g($mc, message-background-color-outgoing),
       --mc-message-background-color-outgoing-nav: -g($mc, message-background-color-outgoing-nav),
-      --mc-message-highlight-backdrop-filter: -g($mc, message-highlight-backdrop-filter),
+      --mc-message-highlight-overlay-color: -g($mc, message-highlight-overlay-color),
       --mc-message-badge-color: -g($mc, message-badge-color),
       --mc-message-badge-background-color: -g($mc, message-badge-background-color),
       --mc-message-overlay-background-color: -g($mc, message-overlay-background-color),
